@@ -8,6 +8,9 @@
 # 	autoconf (optional - used by munin-config)
 #
 # $Log$
+# Revision 1.3  2005/02/16 22:48:56  jimmyo
+# linux/df* now ignores bind mounts.
+#
 # Revision 1.2  2004/08/24 13:37:29  ilmari
 # Add total line
 #
@@ -44,7 +47,7 @@ if [ "$1" = "config" ]; then
 	echo 'graph_vlabel bytes'
 	echo 'graph_category disk'
 	echo 'graph_total Total'
-	df -P -l -x none | sed 1d | grep -v "//" | while read i; do
+	df -P -l -x none -x unknown | sed 1d | grep -v "//" | while read i; do
 		name=`clean_name $i`
 		echo -n "$name.label "
 		echo $i | awk "{ 
@@ -62,7 +65,7 @@ if [ "$1" = "config" ]; then
 	exit 0
 fi
 
-df -P -l  -x none| sed 1d | grep -v "//" | while read i; do
+df -P -l -x unknown  -x none| sed 1d | grep -v "//" | while read i; do
 	name=`clean_name $i`
 	echo -n "$name.value "
 	echo $i | awk '{ print $3 }'
