@@ -11,6 +11,7 @@ munin (CVS)
   * Plugins: Minor bugfix in linux/if_, with info fields.
   * Plugins: Added warning note in linux/if_ output.
   * Plugins: generic/smart_ exit value no longer triggers criticals.
+  * Plugins: linux/df* now ignores bind mounts.
   * Docs: Added man page for munin-node-configure-snmp.
   * Docs: Brushed up the comments in the default munin.conf a bit (Deb#294060).
   * Installation: Create CIGdir if nonexistant.
